--- a/E-Wallet/src/Components/card-styles.css
+++ b/E-Wallet/src/Components/card-styles.css
@@ -1,26 +1,31 @@
 .card-stack {
   position: relative;
-  height: 500px; /* Adjust to contain all your card components */
 }
 
 .card-wrapper {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  transition: transform 0.3s, z-index 0.3s;
-  margin-bottom: 10px;
+  transition: transform 0.3s;
 }
 
-/* Active card has a higher z-index and is positioned at the top */
-.card-wrapper.active {
-  z-index: 10; /* Higher z-index on active card */
-  top: 0; /* Positioned at the top */
+
+.card-stack .card-wrapper:nth-child(n+2) {
+  z-index: 99; /* Next card will have a lower z-index */
+  top: 400px; /* Slightly offset from the top to show behind the active card */
 }
 
-/* Inactive cards are stacked below with a lower z-index */
-.card-wrapper.inactive {
-  z-index: 1; /* Lower z-index for inactive cards */
-  top: 100%; /* Position them lower */
-  margin-top: -150px; /* Overlap the inactive cards */
-  opacity: 0.7; /* Optionally make inactive cards less opaque */
+.card-stack .card-wrapper:nth-child(n+3) {
+  z-index: 98;
+  top: 350px; /* Increase the offset for each subsequent card */
+}
+
+.card-stack .card-wrapper:nth-child(n+4) {
+  z-index: 100;
+  top: 450px; /* Increase the offset for each subsequent card */
+}
+
+.card-stack .card-wrapper:nth-child(n+5) {
+  z-index: 101;
+  top: 500px; /* Increase the offset for each subsequent card */
 }
